--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/Tuppuh/fs-open2020-osa4#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mongoose": "^5.10.9",
+    "mongoose-unique-validator": "^2.0.3",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
