--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "mongoose-unique-validator": "^2.0.3",
     "save-dev": "0.0.1-security"
